--- a/pages/components/bestFit/bestFit.module.scss
+++ b/pages/components/bestFit/bestFit.module.scss
@@ -28,7 +28,8 @@
     // background-color: black;
   }
   .bestFitserviceBgImg1 {
-    background-image: url("../../../assets//images//Rectangle\ 46.png");
+    // background-image: url("../../../assets//images//Rectangle\ 46.png");
+    background-image: url("/public/images/Rectangle\ 46.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -61,7 +62,9 @@
     }
   }
   .bestFitserviceBgImg2 {
-    background-image: url("../../../assets//images/Rectangle\ 46\ \(1\).png");
+    // background-image: url("../../../assets//images/Rectangle\ 46\ \(1\).png");
+    background-image: url("/public/images/Rectangle\ 46\ \(1\).png");
+
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
