--- a/pages/components/bestFit/bestFit.module.scss
+++ b/pages/components/bestFit/bestFit.module.scss
@@ -29,7 +29,7 @@
   }
   .bestFitserviceBgImg1 {
     // background-image: url("../../../assets//images//Rectangle\ 46.png");
-    background-image: url("/public/images/Rectangle\ 46.png");
+    background-image: url("/images/Rectangle\ 46.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -63,7 +63,7 @@
   }
   .bestFitserviceBgImg2 {
     // background-image: url("../../../assets//images/Rectangle\ 46\ \(1\).png");
-    background-image: url("/public/images/Rectangle\ 46\ \(1\).png");
+    background-image: url("/images/Rectangle\ 46\ \(1\).png");
 
     background-repeat: no-repeat;
     background-size: cover;
