--- a/pages/components/solution/solution.module.scss
+++ b/pages/components/solution/solution.module.scss
@@ -28,7 +28,7 @@
   }
   .solution__bgimage {
     // background-image: url("../../../assets/images//Group\ 5938.png");
-    background-image: url("/public/images/Group\ 5938.png");
+    background-image: url("/images/Group\ 5938.png");
 
     background-repeat: no-repeat;
     background-size: cover;
