--- a/pages/components/needs/needs.module.scss
+++ b/pages/components/needs/needs.module.scss
@@ -1,6 +1,6 @@
 .needs {
   // background-image: url("../../../assets/images//Rectangle\ 269.png");
-  background-image: url("/public/images/Rectangle\ 269.png");
+  background-image: url("/images/Rectangle\ 269.png");
 
   background-repeat: no-repeat;
   background-size: cover;
