--- a/pages/components/banner.js/banner.module.scss
+++ b/pages/components/banner.js/banner.module.scss
@@ -6,8 +6,8 @@
     width: 50%;
 
     h1 {
-      font-size: 63px;
-      line-height: 90px;
+      font-size: 43px;
+      line-height: 60px;
       font-weight: 500;
       margin: 50px 0 20px 0;
     }
@@ -15,7 +15,7 @@
       line-height: 40px;
       color: #282828a1;
 
-      font-size: 26px;
+      font-size: 21px;
     }
   }
 
@@ -27,8 +27,8 @@
         color: white;
         //   color: blac;
         background-color: #ff9916;
-        padding: 20px 30px;
-        width: 30%;
+        padding: 20px 50px;
+        // width: 35%;
         border: none;
         border-radius: 10px;
         font-weight: 500;
@@ -39,8 +39,8 @@
         //   color: blac;
         color: #ff9916;
         background-color: white;
-        padding: 20px 30px;
-        width: 30%;
+        padding: 20px 50px;
+        // width: 35%;
         border: 1px solid #ff9916;
         font-weight: 500;
         border-radius: 10px;
