--- a/pages/components/solution/cardSolution/cardSolution.module.scss
+++ b/pages/components/solution/cardSolution/cardSolution.module.scss
@@ -4,8 +4,8 @@
   padding: 60px 20px;
   background-color: white;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-  //   height: 330px;
-  //   width: calc(100% / 2);
+  height: 330px;
+  // width: calc(100% / 1);
   margin: 0 20px;
   margin-bottom: 20px;
   .cardSolution__imgDiv {
